--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ computer-vision/Mask_RCNN-2.1/train_shapes.ipynb
 computer-vision/Mask_RCNN-2.1/utils.py
 computer-vision/Mask_RCNN-2.1/visualize.py
 computer-vision/Mask_RCNN-LeG/mask_rcnn_coco.h5
+*.jpg
